Adding remove shortened url method
